# ggsql-r

./: .Rbuildignore  .gitignore  404.html  CLAUDE.html  CLAUDE.md  CNAME  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  configure  configure.win  cran-comments.md  index.html  index.md  llms.txt  package-lock.json  package.json  pkgdown.yml  search.json  sitemap.xml  tsconfig.json
R/: aaa.R  convert.R  engine.R  extendr-wrappers.R  ggsql-package.R  reader.R  render.R  shiny.R  spec.R  tag.R  validate.R  vega-versions.R  widget.R  writer.R  zzz.R
articles/: engine.html  engine.md  ggsql.html  ggsql.md  index.html  index.md
inst/: ggsql.xml
man/: custom_reader.Rd  duckdb_reader.Rd  ggsql-package.Rd  ggsqlOutput.Rd  ggsql_execute.Rd  ggsql_register.Rd  ggsql_render.Rd  ggsql_save.Rd  ggsql_session_reader.Rd  ggsql_validate.Rd  ggsql_widget.Rd  odbc_reader.Rd  snowflake_reader.Rd  spec_utility.Rd  vegalite_writer.Rd
news/: index.html  index.md
reference/: custom_reader.html  custom_reader.md  duckdb_reader.html  duckdb_reader.md  ggsql-package.html  ggsql-package.md  ggsql.html  ggsqlOutput.html  ggsqlOutput.md  ggsql_execute.html  ggsql_execute.md  ggsql_execute_sql.html  ggsql_is_valid.html  ggsql_register.html  ggsql_register.md  ggsql_render.html  ggsql_render.md  ggsql_save.html  ggsql_save.md  ggsql_session_reader.html  ggsql_session_reader.md  ggsql_table_names.html  index.html  (+15 more)
src/rust/: Cargo.toml  build-env-win.sh
src/rust/src/: lib.rs
(+52 files in other folders)
