[workspace]

[package]
name = 'ggsql-r'
publish = false
version = '0.2.6'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = ['staticlib']
name = 'ggsql'

[dependencies]
extendr-api = '0.8.1'
ggsql = { version = "0.2.6", default-features = false, features = ["duckdb", "vegalite", "builtin-data"] }
polars = { version = "0.52", default-features = false, features = ["ipc_streaming", "dtype-full", "timezones", "cum_agg"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
