[workspace]

[package]
name = 'ggsql-r'
publish = false
version = '0.3.3'
edition = '2021'
rust-version = '1.86'

[lib]
crate-type = ['staticlib']
name = 'ggsql'

[dependencies]
extendr-api = '0.8.1'
ggsql = { version = "0.3.3", default-features = false, features = ["duckdb", "odbc", "vegalite", "builtin-data"] }
arrow = { version = "56", default-features = false, features = ["ipc"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
